--- a/Cons_API/Views/Home/Index.cshtml
+++ b/Cons_API/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <h1 class="display-4">Welcome</h1>
 
     <p>article <a href="https://localhost:44383/articlegeneriquemvc"> listes des articles</a>.</p>
-    <p>client <a href="https://localhost:44383/clientmvc">listes des clients</a>.</p>
+    <p>client <a href="https://localhost:44383/client">listes des clients</a>.</p>
     <p>fournisseur <a href="https://localhost:44383/fournisseurmvc">listes des fournisseurs</a>.</p>
 
 
