--- a/Cons_API/Views/Home/Index.cshtml
+++ b/Cons_API/Views/Home/Index.cshtml
@@ -5,9 +5,9 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
 
-    <p>article <a href="https://localhost:44383/articlegeneriquemvc"> listes des articles</a>.</p>
-    <p>client <a href="https://localhost:44383/client">listes des clients</a>.</p>
-    <p>fournisseur <a href="https://localhost:44383/fournisseurmvc">listes des fournisseurs</a>.</p>
+    <p> <a href="https://localhost:44383/articlegenerique"> listes des articles</a>.</p>
+    <p> <a href="https://localhost:44383/client">listes des clients</a>.</p>
+    <p> <a href="https://localhost:44383/fournisseur">listes des fournisseurs</a>.</p>
 
 
 </div>
